--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
 
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Mak Nurboja Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  </head>
+
+  <header>
+    <nav id="navbar">
+      <div id="about">
+        <a href="#welcome-section">Bio</a>
+      </div>
+      <div id="social-media">
+        <a href="https://www.linkedin.com/in/mr-mak-a8b30334a/" target="_blank"><i class="fa fa-linkedin"></i></a>
+        <a href="https://github.com/just-crow" target="_blank" id="profile-link"><i class="fa fa-github"></i></a>
+        <a href="https://www.instagram.com/mak.nurboja/" target="_blank"><i class="fa fa-instagram"></i></a>
+      </div>
+    </nav>
+  </header>
+  <body>
+    <video id="start-video" autoplay loop>
+      <source src="https://media-hosting.imagekit.io//a5fb8f51c2e748e3/Untitled%20video%20-%20Made%20with%20Clipchamp%20(4).mp4?Expires=1833307441&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=IUs~SKCYhUDAJrgIy-8yVxRjrnEzHAVRhg5IFMMsqGUFclubJJpzMvctKa45mDg5R4~L7xOthqUL9pvpZDg0q2~LYyawovOmmb6SR4tHdlx-F05AgLeQ-1KzsE~RMrkndhnZpglHOX3GuQdtgnVOuBAyUkt~RCy1iSu2cH2FIUmjOGiadJUljUg1vu73xZgxQ-kwFISKVQJj05lV5ZCoQy76Ws35TR6eyqoYJqsL7yr0L5hgxo8gysmaE6qCI1mlF3fbJIvDZ8y~C-WOuhtFJ1jWIXE-XMPITKJs-X3Qgg5rzwggUEtLEHh3LTdzqbAqz-OdXAlNcWRbVYGnhM3eAw"></source>
+    </video>
+    <h1 id="hello-text">Hello,<br>I'm Mak</h1>
+    <section id="welcome-section">
+      <div class="intro">
+        <p class="intro-text"><strong>Hi, I'm Mak Nurboja</strong> – a Front-End Developer passionate about crafting clean, responsive, and user-friendly web experiences.</p>
+      </div>
+
+      <div class="intro right"><p class="intro-text smaller">With a keen eye for design and a strong foundation in HTML, CSS, and JavaScript, I specialize in turning ideas into interactive and visually appealing websites.<h1 class="middle">Take a look at some of my works:</h1></p></div>
+      <div id="projects">
+        <a class="project-tile" href="https://codepen.io/Mr-Mak-Mister-Mak/pen/GgKbMzP" target="_blank"><p>Book Product Landing Page</p></a>
+        <a class="project-tile" href="https://codepen.io/Mr-Mak-Mister-Mak/pen/YPKorbO" target="_blank"><p>Palindrome Checker</p></a>
+        <a class="project-tile" href="https://codepen.io/Mr-Mak-Mister-Mak/pen/ogvrGry" target="_blank"><p>Roman Numeral Converter</p></a>
+        <a class="project-tile" href="https://codepen.io/Mr-Mak-Mister-Mak/pen/jENjGgW" target="_blank"><p>Cash Register</p></a>
+        <a class="project-tile" href="https://codepen.io/Mr-Mak-Mister-Mak/pen/bNbPYbG" target="_blank"><p>Pokemon Searcher</p></a>
+        <a class="project-tile" href="https://codepen.io/Mr-Mak-Mister-Mak/pen/VYZJrZG" target="_blank"><p>Tehnical Documentation Page</p></a>
+      </div>
+    </section>
+  </body>
+</html>
